Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
Description
reactos-bootcd-0.4.16-dev-779-g6988b4e-x86-gcc-lin-dbg

- Go to attribute
- Set dimension to 900000
- Rendering gets grey, vertical scrolling fails
- Logs the following several times
(ntoskrnl/mm/ARM3/vadnode.c:344) Not enough free space to insert this VAD node! |
(ntoskrnl/mm/ARM3/virtual.c:4810) Failed to insert the VAD! |
(win32ss/gdi/ntgdi/dibobj.c:2011) Failed to allocate memory |
(win32ss/gdi/ntgdi/dibobj.c:1026) Unable to create a DIB Section! |
Attachments
Issue Links
- blocks
-
CORE-19466 mspaint: Refactor and improve Part 3
-
- Untriaged
-