base/applications/mspaint/canvas.h
@@ -57,12 +57,11 @@ public:
 protected:
     HITTEST m_hitCanvasSizeBox;
     POINT m_ptOrig; // The origin of drag start
-    HBITMAP m_ahbmCached[2]; // The cached buffer bitmaps
     CRect m_rcResizing; // Resizing rectagle
 
     HITTEST CanvasHitTest(POINT pt);
     RECT GetBaseRect();
-    VOID DoDraw(HDC hDC, RECT& rcClient, RECT& rcPaint);
+    BOOL DoDraw(HDC hDC, RECT& rcClient, RECT& rcPaint);
     VOID OnHVScroll(WPARAM wParam, INT fnBar);
 
     LRESULT OnSize(UINT nMsg, WPARAM wParam, LPARAM lParam, BOOL& bHandled);
